Changes & Optimizations! - Tweaked character_creator_page_one.xml - Renamed dm_manager.xml, DMManager.java, Help.java, Settings.java, settings.xml, and fixed their references so they reference the current name.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,10 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="fourth_message"> this is the data page </string>
+    <string name="fourth_message">Data</string>
+    <string name="fifth_message">DM Manager</string>
+    <string name="help_message">Help</string>
 
-    <string name="EditCharacterNameDefaultText">Name</string>
-    <string name="EditCharacterLevelDefaultText">Level</string>
+    <string name="EditCharacterNameDefaultText">Character Name</string>
+    <string name="EditCharacterLevelDefaultText">1</string>
 </resources>
