Changes & Optimizations! - Overhauled button names. - Fixed stuff with the pages where you make/view characters (CharacterList.java, CharacterCreatorPageOne.java) - Messed around with XML (character_creator_page_one.xml, character_list.xml, main_menu.xml, nav_graph.xml, settings.xml, strings.xml)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,12 @@
 
     <string name="EditCharacterNameDefaultText">Character Name</string>
     <string name="EditCharacterLevelDefaultText">1</string>
+
+    <string-array name="Classes">
+        <item>Artificer</item>
+        <item>Barbarian</item>
+        <item>Bard</item>
+        <item>Cleric</item>
+    </string-array>
+
 </resources>
