--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,11 +30,65 @@
     <string name="EditCharacterNameDefaultText">Character Name</string>
     <string name="EditCharacterLevelDefaultText">1</string>
 
+    <string-array name="Races">
+        <item>Aarakocra</item>
+        <item>Aasimar</item>
+        <item>Bugbear</item>
+        <item>Centaur</item>
+        <item>Changeling</item>
+        <item>Deep Gnome</item>
+        <item>Dragonborn</item>
+        <item>Duergar</item>
+        <item>Dwarf</item>
+        <item>Eladrin</item>
+        <item>Elf</item>
+        <item>Fairy</item>
+        <item>Firbolg</item>
+        <item>Genasi</item>
+        <item>Githyanki</item>
+        <item>Githzerai</item>
+        <item>Gnome</item>
+        <item>Goblin</item>
+        <item>Goliath</item>
+        <item>Grung</item>
+        <item>Half-Elf</item>
+        <item>Half-Orc</item>
+        <item>Halfling</item>
+        <item>Harengon</item>
+        <item>Hobgoblin</item>
+        <item>Human</item>
+        <item>Kenku</item>
+        <item>Kobold</item>
+        <item>Lizardfolk</item>
+        <item>Locathah</item>
+        <item>Minotaur</item>
+        <item>Orc</item>
+        <item>Owlin</item>
+        <item>Satyr</item>
+        <item>Sea Elf</item>
+        <item>Shadar-Kai</item>
+        <item>Shifter</item>
+        <item>Tabaxi</item>
+        <item>Tiefling</item>
+        <item>Tortle</item>
+        <item>Triton</item>
+        <item>Verdan</item>
+        <item>Yuan-Ti</item>
+    </string-array>
+
     <string-array name="Classes">
         <item>Artificer</item>
         <item>Barbarian</item>
         <item>Bard</item>
         <item>Cleric</item>
+        <item>Druid</item>
+        <item>Fighter</item>
+        <item>Monk</item>
+        <item>Paladin</item>
+        <item>Ranger</item>
+        <item>Rogue</item>
+        <item>Sorcerer</item>
+        <item>Warlock</item>
     </string-array>
 
 </resources>
