fixed error in data page
Signed-off-by: Alexis <ambrizlex@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="back">Back</string>
 
     <string name="welcome_message">
-       Welcome to DND e5 manger!
+       Welcome to DND e5 manager!
         This app is in early development and this text is a placeholder.
 
     </string>
