--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,10 +41,10 @@
         <item>Acolyte</item>
         <item>Anthropologist</item>
         <item>Athlete [MOT]</item>
-        <item>Augen Trust (spy) [MOT}</item>
+        <item>Augen Trust (spy) [MOT]</item>
         <item>Azorius Functionary [GGR]</item>
         <item>Black Fist Double Agents</item>
-        <item>Boros Legionnaire [GGR}</item>
+        <item>Boros Legionnaire [GGR]</item>
         <item>Caravan Specialist</item>
         <item>Charlatan</item>
         <item>City Watch</item>
@@ -53,7 +53,7 @@
         <item>Cormanthor Refugee</item>
         <item>Courtier</item>
         <item>Criminal</item>
-        <item>Dimir Operative [GGR}</item>
+        <item>Dimir Operative [GGR]</item>
         <item>Dissenter</item>
         <item>Dragon Casualty</item>
         <item>Earthspur Miner</item>
