those changes from last night that i wanted today...

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">DnD 5e Manager</string>
-    <string name="action_settings">Ajustes</string>
+    <string name="app_name">Gerente de D&amp;D 5e</string>
+    <string name="text_common_settings">Ajustes</string>
     <string name="navigate_back">Devuelve</string>
-    <string name="character_default_name">Nombre</string>
-    <string name="strength_text">Fuerza</string>
-    <string name="dexterity_text">Destreza</string>
-    <string name="constitution_text">Constitución</string>
-    <string name="intelligence_text">Inteligencia</string>
-    <string name="wisdom_text">Sabiduría</string>
-    <string name="charisma_text">Carisma</string>
-    <string name="roll_stats">Tira las estadísticas</string>
+    <string name="text_default_character_name">Nombre</string>
+    <string name="ability_text_strength">Fuerza</string>
+    <string name="ability_text_dexterity">Destreza</string>
+    <string name="ability_text_constitution">Constitución</string>
+    <string name="ability_text_intelligence">Inteligencia</string>
+    <string name="ability_text_wisdom">Sabiduría</string>
+    <string name="ability_text_charisma">Carisma</string>
+    <string name="action_character_roll_stats">Tira las estadísticas</string>
     <string name="navigate_next">La pagina próxima</string>
-    <string name="roll_health">Tira la salud</string>
-    <string name="minimum_health">Salud minima</string>
-    <string name="maximum_health">Salud máxima</string>
-    <string name="spells_text">Hechizos</string>
-    <string name="weapons_text">Armas</string>
-    <string name="armor_text">Armadura</string>
+    <string name="action_character_roll_health">Tira la salud</string>
+    <string name="action_character_minimum_health">Salud minima</string>
+    <string name="action_character_maximum_health">Salud máxima</string>
+    <string name="navigate_info_spells">Hechizos</string>
+    <string name="navigate_info_weapons">Armas</string>
+    <string name="navigate_info_armor">Armadura</string>
     <string name="dice_d6">Dado de 6 caras</string>
     <string name="dice_d8">Dado de 8 caras</string>
     <string name="dice_d10">Dado de 10 caras</string>
     <string name="dice_d12">Dado de 12 caras</string>
-    <string name="help_search">🔍 Busca ayuda</string>
+    <string name="text_help_search">🔍 Busca ayuda</string>
+    <string name="text_help_center_title">Centro de Ayuda</string>
+    <string name="navigate_characters">Personajes</string>
+    <string name="navigate_information">Información</string>
+    <string name="navigate_dice_roller">Rodillo de Dados</string>
+    <string name="text_title_main_menu">Gerente de 5e</string>
+    <string name="spell_casting_time">Tiempo de Lanzamiento:</string>
+    <string name="spell_range">Rango:</string>
+    <string name="spell_description">Descripción</string>
+    <string name="spell_supported_classes">Clases Apoyadas:</string>
+    <string name="spell_materials">Materiales:</string>
+    <string name="spell_components">Componentes</string>
+    <string name="spell_component_verbal">Verbal</string>
+    <string name="spell_component_somatic">Somático</string>
+    <string name="spell_component_material">Material</string>
 </resources>
